--- a/WEB/index.html
+++ b/WEB/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Love Market | Welcome </title>
-	<meta name="author" content="MyTeam" />
+	<meta name="author" content="DTTV" />
 	<meta name="description" content="Website bán đồ người yêu cũ." />
 
 	<!--Include  Javascript library-->
