--- a/WEB/index.html
+++ b/WEB/index.html
@@ -63,24 +63,26 @@
 				<p>Nơi trao đổi, mua bán những món đồ
 					<br> của người yêu cũ</p>
 				<div class="login-box  animated slideInDown">
-					<div class="login-image">
+					<!--<div class="login-image">
 						<div class="cloud cloud1 animated fadeInLeft"></div>
 						<div class="cloud thunder animated bounceIn"></div>
 						<div class="cloud rain animated bounceIn"></div>
 						<div class="cloud cloud2 animated fadeInRight"></div>
-					</div>
+					</div>-->
 					<form action="" class="login-form">
+						<h2>Đăng nhập</h2>
 						<input type="text" id="username" class="login-input username-box" name="username" placeholder="username">
 						<br>
 						<br>
 						<input type="password" id="password" class="login-input password-box" name="password" placeholder="password">
 						<br>
+						<div class="forgot-password">Quên mật khẩu?
+								<a href="">Nhấn vào đây</a>
+							</div>
 						<br>
 						<input type="submit" class="button login-button" value="Đăng nhập">
-						<br>
-						<div class="forgot-password">Quên mật khẩu?
-							<a href="">Nhấn ở đây</a>
-						</div>
+						<br><br>
+						<h6  class="create-account" ><a href="">Tạo tài khoản</a></h6>
 					</form>
 				</div>
 			</div>
