--- a/WEB/index.html
+++ b/WEB/index.html
@@ -6,6 +6,7 @@
 	<title>Love Market | Welcome </title>
 	<meta name="author" content="DTTV" />
 	<meta name="description" content="Website bán đồ người yêu cũ." />
+	<link rel="icon" href="./Images/Home/favicon.png">
 
 	<!--Include  Javascript library-->
 	<link rel="stylesheet" href="css/reset.css">
@@ -41,14 +42,14 @@
 					</a>
 					<nav>
 						<ul>
-							<li class="current">
+							<li ><!--class="current"-->
 								<a href="index.html">Tìm sản phẩm</a>
 							</li>
 							<li>
 								<a href="#">Thông báo</a>
 							</li>
 							<li>
-								<a href="#">Tài khoản</a>
+								<a href="./html/create_account.html">Tài khoản</a>
 							</li>
 							<li>
 								<a href="#">Giới thiệu</a>
@@ -82,7 +83,7 @@
 						<br>
 						<input type="submit" class="button login-button" value="Đăng nhập">
 						<br><br>
-						<h6  class="create-account" ><a href="">Tạo tài khoản</a></h6>
+						<h6  class="create-account" ><a href="./html/create_account.html">Tạo tài khoản</a></h6>
 					</form>
 				</div>
 			</div>
@@ -229,7 +230,7 @@
 		<!-- Begin section 3 -->
 		<div class="section" id="section2">
 			<div class="content">
-
+				
 			</div>
 			<footer class="flex-rw">
 				<ul class="footer-list-top">
