Revert "Thêm PWA vào trang chủ"
This reverts commit 0151bc1e0fd95e5258adfe5cf9382a9b76f9c62e.

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -7,45 +7,29 @@
 	<meta name="author" content="DTTV" />
 	<meta name="description" content="Website bán đồ người yêu cũ." />
 	<link rel="icon" href="./Images/Home/favicon.png">
-	<meta name="viewport" content="width=device-width initial-scale=1.0">
-	<meta name="mobile-web-app-capable" content="yes">
-  	<meta name="apple-mobile-web-app-capable" content="yes">
-  	<meta name="msapplication-starturl" content="/">
-  	<meta name="theme-color" content="#f48c5b">
 
-
-	<!--**********************
-		Include  CSS library
-		**********************-->
-	<link rel="stylesheet" href="./css/reset.css">
-	<link rel="stylesheet" type="text/css" href="./css/javascript.fullPage.css" />
-	<link rel="stylesheet" href="./css/style.css" />
-	<link rel="stylesheet" href="./css/animate.css">
-
-	<!--**********************
-	Include  Javascript library
-	**********************-->
-	<script src="./sw-register.js"></script>
+	<!--Include  Javascript library-->
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/javascript.fullPage.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/animate.css">
 
 	<!-- Include Snow Effect -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
-	<script src="./js/jquery.snow.min.1.0.js"></script>
+	<script src="js/jquery.snow.min.1.0.js"></script>
 
 
-	<!--**********************
-	Include Font 
-	**********************-->
+	<!--Include Font -->
 	<link href="https://fonts.googleapis.com/css?family=Gravitas+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 	<!-- Vietnamese font -->
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-	<link rel="manifest" href="./manifest.json">
 </head>
 
 <body>
 	<div id="fullpage">
 		<!-- section 1 -->
-		<div class="section " id="section0" >
+		<div class="section " id="section0">
 			<!--Begin header -->
 			<header id="menu">
 				<div class="container">
@@ -58,7 +42,7 @@
 					</a>
 					<nav>
 						<ul>
-							<li><!--class="current"-->
+							<li ><!--class="current"-->
 								<a href="index.html">Tìm sản phẩm</a>
 							</li>
 							<li>
@@ -77,7 +61,7 @@
 			<!--End header -->
 			<div class="content">
 				<!--<h1>Love Market</h1>-->
-				<p id="vt323">Nơi trao đổi, mua bán những món đồ
+				<p>Nơi trao đổi, mua bán những món đồ
 					<br> của người yêu cũ</p>
 				<div class="login-box  animated slideInDown">
 					<!--<div class="login-image">
