Tạo trang "quên mật khẩu"
Thêm file forget_password.html và style_ forget_password.css

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -59,7 +59,7 @@
 					<nav>
 						<ul>
 							<li><!--class="current"-->
-								<a href="index.html">Tìm sản phẩm</a>
+								<a href="#">Tìm sản phẩm</a>
 							</li>
 							<li>
 								<a href="#">Thông báo</a>
@@ -93,9 +93,7 @@
 						<br>
 						<input type="password" id="password" class="login-input password-box" name="password" placeholder="password">
 						<br>
-						<div class="forgot-password">Quên mật khẩu?
-								<a href="">Nhấn vào đây</a>
-							</div>
+						<h6><a href="./html/forget_password.html">Quên mật khẩu</a></h6>
 						<br>
 						<input type="submit" class="button login-button" value="Đăng nhập">
 						<br><br>
