Thêm phân biệt cho 2 trang index
- Thêm comment phân biệt index.php với index.html

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -14,7 +14,7 @@
   	<meta name="theme-color" content="#f48c5b">
 
 
-	<!--**********************
+	<!--********************** Đây là file index.html
 		Include  CSS library
 		**********************-->
 	<link rel="stylesheet" href="./css/reset.css">
