Thêm mã hóa MD5

--- a/CSDL/Report_files/Home_LightBlue.html
+++ b/CSDL/Report_files/Home_LightBlue.html
@@ -40,7 +40,7 @@ TABLE.TitleFrame {
             </tr>
             <tr>
               <td class="Title" align="right">Report:</td>
-              <td class="Title">Report CSDL</td>
+              <td class="Title">Report 1</td>
             </tr>
             <tr>
               <td class="Title" align="right">Version:</td>
@@ -48,7 +48,7 @@ TABLE.TitleFrame {
             </tr>
             <tr>
               <td class="Title" align="right">Date:</td>
-              <td class="Title">6/4/2018</td>
+              <td class="Title">6/13/2018</td>
             </tr>
             <tr>
               <td class="Title" align="right">Author:</td>
