--- a/CSDL/Report_files/Footer_LightBlue.html
+++ b/CSDL/Report_files/Footer_LightBlue.html
@@ -20,8 +20,8 @@
    <td WIDTH="100%" HEIGHT="18">
     <table CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
      <tr>
-       <td class="Title" width="90%">Report CSDL for Physical Data Model 'CSDL' (CSDL)</td>
-       <td class="Title" width="*" align="right">6/4/2018</td>
+       <td class="Title" width="90%">Report 1 for Physical Data Model 'CSDL' (CSDL)</td>
+       <td class="Title" width="*" align="right">6/13/2018</td>
      </tr>
     </table>
    </td>
